--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- meta information -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- page title -->
     <title>Udacity Project 1: Personal Blog</title>
     <!-- styles -->
@@ -13,6 +13,8 @@
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link async rel="stylesheet" href="css/skeleton.css" />
+    <link async rel="stylesheet" href="css/blog-post.css" />
+    <link async rel="stylesheet" href="css/mobile.css" />
     <!-- icons -->
     <link
       async
@@ -22,13 +24,176 @@
   </head>
   <body>
     <header id="header">
-      <img src="https://via.placeholder.com/100" alt="Logo" />
       <nav id="main-nav">
-        <li class="blog"><a href="pages/blog-post.html">Blog posts</a></li>
+        <li class="blog"><a href="#blogpost-list">Blog</a></li>
       </nav>
     </header>
-    <section id="featured"></section>
-    <main id="content" class="container"></main>
+    <section id="featured">
+      <blockquote>
+        All I really need is love, but a little candy now and then doesn't
+        hurt!<br /><span class="author"><b>Charles Schulz</b></span>
+      </blockquote>
+    </section>
+    <section id="introduction">
+      <img id="intro-pic" src="assets/felix-geelhaar.jpg" alt="Picture of me" />
+      <div id="intro-text">
+        <h2>This is me</h2>
+        <p id="description">
+          The path of the righteous man is beset on all sides by the iniquities
+          of the selfish and the tyranny of evil men. Blessed is he who, in the
+          name of charity and good will, shepherds the weak through the valley
+          of darkness, for he is truly his brother's keeper and the finder of
+          lost children. And I will strike down upon thee with great vengeance
+          and furious anger those who would attempt to poison and destroy My
+          brothers. And you will know My name is the Lord when I lay My
+          vengeance upon thee.
+        </p>
+      </div>
+    </section>
+    <main id="content" role="main">
+      <h1>Hello there!</h1>
+      <div id="blogpost-list">
+        <article class="blogpost">
+          <h2 class="blogpost-header" role="heading">
+            Halvah bonbon chupa chups
+          </h2>
+          <div class="blogpost-content" role="contentinfo">
+            <img
+              class="blogpost-image"
+              src="./assets/bright-candies-colorful-539447.jpg"
+              alt="Fruitcake sweet"
+              role="img"
+            />
+            <figcaption>Halvah bonbon chupa chups</figcaption>
+            <p class="blogpost-text" role="text">
+              Fruitcake sweet sweet roll ice cream wafer gummies sweet carrot
+              cake biscuit. Cookie soufflé I love chocolate cake tootsie roll.
+              Bonbon sweet roll halvah halvah pie chupa chups I love. Jujubes
+              candy canes pastry candy canes chocolate cake tart muffin halvah.
+              Macaroon ice cream pie danish carrot cake. Liquorice cotton candy
+              powder marshmallow I love. Chocolate cake marshmallow muffin cake.
+            </p>
+          </div>
+          <a class="read-more" role="button" href="pages/blog-post-1.html"
+            >read more</a
+          >
+        </article>
+        <article class="blogpost">
+          <h2 class="blogpost-header" role="heading">
+            Pudding icing chocolate bar
+          </h2>
+          <div class="blogpost-content" role="contentinfo">
+            <img
+              class="blogpost-image"
+              src="./assets/candy-colorful-colourful-51352.jpg"
+              alt="muffin chocolate macaroon"
+              role="img"
+            />
+            <figcaption>Pudding icing chocolate bar</figcaption>
+            <p class="blogpost-text" role="text">
+              Gummies muffin muffin chocolate macaroon. I love gummies pudding
+              jelly topping ice cream cotton candy lemon drops. I love pastry
+              candy biscuit I love I love. I love sweet roll chupa chups
+              lollipop. Lollipop danish pastry chocolate cake sweet roll candy
+              canes bear claw. Croissant jelly beans cake I love pie candy canes
+              chupa chups. Cotton candy halvah danish sesame snaps icing cake
+              cotton candy wafer.
+            </p>
+          </div>
+          <a class="read-more" role="button" href="pages/blog-post-2.html"
+            >read more</a
+          >
+        </article>
+        <article class="blogpost">
+          <h2 class="blogpost-header" role="heading">
+            Sesame snaps candy canes
+          </h2>
+          <div class="blogpost-content" role="contentinfo">
+            <img
+              class="blogpost-image"
+              src="./assets/candy-colorful-confection-208006.jpg"
+              alt="pudding candy"
+              role="img"
+            />
+            <figcaption>Sesame snaps candy canes</figcaption>
+            <p class="blogpost-text" role="text">
+              I love pudding candy. Marzipan marzipan jelly-o chocolate cake
+              pudding I love bonbon. Oat cake oat cake biscuit cake dessert ice
+              cream. Candy pudding cheesecake tiramisu oat cake bear claw
+              croissant dragée I love. Carrot cake marzipan I love candy canes
+              sugar plum. Donut danish I love cotton candy carrot cake.
+            </p>
+          </div>
+          <a class="read-more" role="button" href="pages/blog-post-3.html"
+            >read more</a
+          >
+        </article>
+        <article class="blogpost">
+          <h2 class="blogpost-header" role="heading">
+            Apple pie carrot cake toffee
+          </h2>
+          <div class="blogpost-content" role="contentinfo">
+            <img
+              class="blogpost-image"
+              src="./assets/background-baked-bakery-1407346.jpg"
+              alt="Apple pie carrot cake"
+              role="img"
+            />
+            <figcaption>Apple pie carrot cake toffee</figcaption>
+            <p class="blogpost-text" role="text">
+              Cake liquorice chocolate pie jelly-o. Chupa chups cookie
+              croissant. Cake marzipan dessert. Pastry sweet roll halvah. Powder
+              chupa chups biscuit cake tootsie roll bonbon biscuit.
+            </p>
+          </div>
+          <a class="read-more" role="button" href="pages/blog-post-4.html"
+            >read more</a
+          >
+        </article>
+        <article class="blogpost">
+          <h2 class="blogpost-header" role="heading">
+            Cotton candy marshmallow candy
+          </h2>
+          <div class="blogpost-content" role="contentinfo">
+            <img
+              class="blogpost-image"
+              src="./assets/rsz_candy-color-creative-54633.jpg"
+              alt="Pudding macaroon"
+              role="img"
+            />
+            <figcaption><em>Cotton candy marshmallow candy</em></figcaption>
+            <p>
+              Pudding macaroon I love tiramisu toffee sesame snaps sugar plum
+              candy canes cotton candy. Chocolate cake jelly fruitcake muffin
+              icing dessert. Icing pie cake wafer marshmallow I love topping.
+              Powder pie toffee danish halvah candy canes chocolate bar. Sweet
+              roll donut chocolate bar oat cake bonbon chocolate cake gummies
+              candy canes icing.
+            </p>
+          </div>
+          <a class="read-more" role="button" href="pages/blog-post-5.html"
+            >read more</a
+          >
+        </article>
+        <article class="blogpost">
+          <h2 class="blogpost-header" role="heading">
+            Next post soon
+          </h2>
+          <div class="blogpost-content" role="contentinfo">
+            <img
+              class="blogpost-image"
+              src="https://via.placeholder.com/250"
+              alt="placeholder picture"
+              role="img"
+            />
+            <p>
+              I'm writing currently an article about bar oat cake bonbon
+              chocolate cake gummies...
+            </p>
+          </div>
+        </article>
+      </div>
+    </main>
     <footer id="footer">
       <p class="copyright">
         © 2019
