refactor to use card instead of blogpost class

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link async rel="stylesheet" href="css/skeleton.css" />
-    <link async rel="stylesheet" href="css/blog-post.css" />
-    <link async rel="stylesheet" href="css/mobile.css" />
+    <link async rel="stylesheet" href="css/card.css" />
     <!-- icons -->
     <link
       async
@@ -53,19 +52,21 @@
     <main id="content" role="main">
       <h1>Hello there!</h1>
       <div id="blogpost-list">
-        <article class="blogpost">
-          <h2 class="blogpost-header" role="heading">
-            Halvah bonbon chupa chups
-          </h2>
-          <div class="blogpost-content" role="contentinfo">
-            <img
-              class="blogpost-image"
-              src="./assets/bright-candies-colorful-539447.jpg"
-              alt="Fruitcake sweet"
-              role="img"
-            />
-            <figcaption>Halvah bonbon chupa chups</figcaption>
-            <p class="blogpost-text" role="text">
+        <article class="card">
+          <img
+            class="card-img"
+            src="./assets/bright-candies-colorful-539447.jpg"
+            alt="Fruitcake sweet"
+            role="img"
+          />
+          <figcaption class="card-img-caption">
+            <em>Halvah bonbon chupa chups</em>
+          </figcaption>
+          <div class="card-body" role="contentinfo">
+            <h2 class="card-header" role="heading">
+              Halvah bonbon chupa chups
+            </h2>
+            <p class="card-text" role="text">
               Fruitcake sweet sweet roll ice cream wafer gummies sweet carrot
               cake biscuit. Cookie soufflé I love chocolate cake tootsie roll.
               Bonbon sweet roll halvah halvah pie chupa chups I love. Jujubes
@@ -74,23 +75,25 @@
               powder marshmallow I love. Chocolate cake marshmallow muffin cake.
             </p>
           </div>
-          <a class="read-more" role="button" href="pages/blog-post-1.html"
+          <a class="card-link" role="button" href="pages/blog-post-1.html"
             >read more</a
           >
         </article>
-        <article class="blogpost">
-          <h2 class="blogpost-header" role="heading">
-            Pudding icing chocolate bar
-          </h2>
-          <div class="blogpost-content" role="contentinfo">
-            <img
-              class="blogpost-image"
-              src="./assets/candy-colorful-colourful-51352.jpg"
-              alt="muffin chocolate macaroon"
-              role="img"
-            />
-            <figcaption>Pudding icing chocolate bar</figcaption>
-            <p class="blogpost-text" role="text">
+        <article class="card">
+          <img
+            class="card-img"
+            src="./assets/candy-colorful-colourful-51352.jpg"
+            alt="muffin chocolate macaroon"
+            role="img"
+          />
+          <figcaption class="card-img-caption">
+            <em>Pudding icing chocolate bar</em>
+          </figcaption>
+          <div class="card-body" role="contentinfo">
+            <h2 class="card-header" role="heading">
+              Pudding icing chocolate bar
+            </h2>
+            <p class="card-text" role="text">
               Gummies muffin muffin chocolate macaroon. I love gummies pudding
               jelly topping ice cream cotton candy lemon drops. I love pastry
               candy biscuit I love I love. I love sweet roll chupa chups
@@ -100,23 +103,25 @@
               cotton candy wafer.
             </p>
           </div>
-          <a class="read-more" role="button" href="pages/blog-post-2.html"
+          <a class="card-link" role="button" href="pages/blog-post-2.html"
             >read more</a
           >
         </article>
-        <article class="blogpost">
-          <h2 class="blogpost-header" role="heading">
-            Sesame snaps candy canes
-          </h2>
-          <div class="blogpost-content" role="contentinfo">
-            <img
-              class="blogpost-image"
-              src="./assets/candy-colorful-confection-208006.jpg"
-              alt="pudding candy"
-              role="img"
-            />
-            <figcaption>Sesame snaps candy canes</figcaption>
-            <p class="blogpost-text" role="text">
+        <article class="card">
+          <img
+            class="card-img"
+            src="./assets/candy-colorful-confection-208006.jpg"
+            alt="pudding candy"
+            role="img"
+          />
+          <figcaption class="card-img-caption">
+            <em>Sesame snaps candy canes</em>
+          </figcaption>
+          <div class="card-body" role="contentinfo">
+            <h2 class="card-header" role="heading">
+              Sesame snaps candy canes
+            </h2>
+            <p class="card-text" role="text">
               I love pudding candy. Marzipan marzipan jelly-o chocolate cake
               pudding I love bonbon. Oat cake oat cake biscuit cake dessert ice
               cream. Candy pudding cheesecake tiramisu oat cake bear claw
@@ -124,44 +129,48 @@
               sugar plum. Donut danish I love cotton candy carrot cake.
             </p>
           </div>
-          <a class="read-more" role="button" href="pages/blog-post-3.html"
+          <a class="card-link" role="button" href="pages/blog-post-3.html"
             >read more</a
           >
         </article>
-        <article class="blogpost">
-          <h2 class="blogpost-header" role="heading">
-            Apple pie carrot cake toffee
-          </h2>
-          <div class="blogpost-content" role="contentinfo">
-            <img
-              class="blogpost-image"
-              src="./assets/background-baked-bakery-1407346.jpg"
-              alt="Apple pie carrot cake"
-              role="img"
-            />
-            <figcaption>Apple pie carrot cake toffee</figcaption>
-            <p class="blogpost-text" role="text">
+        <article class="card">
+          <img
+            class="card-img"
+            src="./assets/background-baked-bakery-1407346.jpg"
+            alt="Apple pie carrot cake"
+            role="img"
+          />
+          <figcaption class="card-img-caption">
+            <em>Apple pie carrot cake toffee</em>
+          </figcaption>
+          <div class="card-body" role="contentinfo">
+            <h2 class="card-header" role="heading">
+              Apple pie carrot cake toffee
+            </h2>
+            <p class="card-text" role="text">
               Cake liquorice chocolate pie jelly-o. Chupa chups cookie
               croissant. Cake marzipan dessert. Pastry sweet roll halvah. Powder
               chupa chups biscuit cake tootsie roll bonbon biscuit.
             </p>
           </div>
-          <a class="read-more" role="button" href="pages/blog-post-4.html"
+          <a class="card-link" role="button" href="pages/blog-post-4.html"
             >read more</a
           >
         </article>
-        <article class="blogpost">
-          <h2 class="blogpost-header" role="heading">
-            Cotton candy marshmallow candy
-          </h2>
-          <div class="blogpost-content" role="contentinfo">
-            <img
-              class="blogpost-image"
-              src="./assets/rsz_candy-color-creative-54633.jpg"
-              alt="Pudding macaroon"
-              role="img"
-            />
-            <figcaption><em>Cotton candy marshmallow candy</em></figcaption>
+        <article class="card">
+          <img
+            class="card-img"
+            src="./assets/rsz_candy-color-creative-54633.jpg"
+            alt="Pudding macaroon"
+            role="img"
+          />
+          <figcaption class="card-img-caption">
+            <em>Cotton candy marshmallow candy</em>
+          </figcaption>
+          <div class="card-body" role="contentinfo">
+            <h2 class="card-header" role="heading">
+              Cotton candy marshmallow candy
+            </h2>
             <p>
               Pudding macaroon I love tiramisu toffee sesame snaps sugar plum
               candy canes cotton candy. Chocolate cake jelly fruitcake muffin
@@ -171,21 +180,21 @@
               candy canes icing.
             </p>
           </div>
-          <a class="read-more" role="button" href="pages/blog-post-5.html"
+          <a class="card-link" role="button" href="pages/blog-post-5.html"
             >read more</a
           >
         </article>
-        <article class="blogpost">
-          <h2 class="blogpost-header" role="heading">
-            Next post soon
-          </h2>
-          <div class="blogpost-content" role="contentinfo">
-            <img
-              class="blogpost-image"
-              src="https://via.placeholder.com/250"
-              alt="placeholder picture"
-              role="img"
-            />
+        <article class="card">
+          <img
+            class="card-img"
+            src="https://via.placeholder.com/250"
+            alt="placeholder picture"
+            role="img"
+          />
+          <div class="card-body" role="contentinfo">
+            <h2 class="card-header" role="heading">
+              Next post soon
+            </h2>
             <p>
               I'm writing currently an article about bar oat cake bonbon
               chocolate cake gummies...
