--- a/pages/blog-post-1.html
+++ b/pages/blog-post-1.html
@@ -13,8 +13,7 @@
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link async rel="stylesheet" href="../css/skeleton.css" />
-    <link async rel="stylesheet" href="../css/blog-post-detail.css" />
-    <link async rel="stylesheet" href="../css/mobile-blog-post-detail.css" />
+    <link async rel="stylesheet" href="../css/card-detail.css" />
     <!-- icons -->
     <link
       async
@@ -36,36 +35,54 @@
     </section>
     <main id="content" role="main">
       <h1>Halvah bonbon chupa chups</h1>
-      <article id="blogpost-detail">
-        <div class="blogpost-content" role="contentinfo">
+      <article class="card">
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/bright-candies-colorful-539447.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
-          <p class="blogpost-text" role="text">
+          <figcaption class="card-img-caption">
+            <em>Halvah bonbon chupa chups</em>
+          </figcaption>
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            Halvah bonbon chupa chups
+          </h2>
+          <p class="card-text" role="text">
+            Fruitcake sweet sweet roll ice cream wafer gummies sweet carrot cake
+            biscuit. <b>Cookie</b> soufflé I love chocolate cake tootsie roll.
+            Bonbon sweet roll halvah halvah pie chupa chups I love. Jujubes
+            candy canes pastry candy canes chocolate cake tart muffin halvah.
+            Macaroon ice cream pie danish carrot cake. Liquorice cotton candy
+            powder marshmallow <em>I love.</em>
+            <u>Chocolate cake marshmallow muffin cake.</u>
+          </p>
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            Fruitcake sweet sweet
+          </h2>
+          <p class="card-text" role="text">
             Fruitcake sweet sweet roll ice cream wafer gummies sweet carrot cake
             biscuit. Cookie soufflé I love chocolate cake tootsie roll. Bonbon
-            sweet roll halvah halvah pie chupa chups I love. Jujubes candy canes
-            pastry candy canes chocolate cake tart muffin halvah. Macaroon ice
-            cream pie danish carrot cake. Liquorice cotton candy powder
-            marshmallow I love. Chocolate cake marshmallow muffin cake.
+            sweet roll <b>halvah halvah pie chupa</b> chups I love. Jujubes
+            candy canes pastry candy canes <u>chocolate cake</u> tart muffin
+            halvah. Macaroon ice cream pie danish carrot cake. Liquorice cotton
+            candy powder marshmallow I love.
+            <em>Chocolate cake marshmallow muffin cake.</em>
           </p>
-          <p class="blogpost-text" role="text">
-            Fruitcake sweet sweet roll ice cream wafer gummies sweet carrot cake
-            biscuit. Cookie soufflé I love chocolate cake tootsie roll. Bonbon
-            sweet roll halvah halvah pie chupa chups I love. Jujubes candy canes
-            pastry candy canes chocolate cake tart muffin halvah. Macaroon ice
-            cream pie danish carrot cake. Liquorice cotton candy powder
-            marshmallow I love. Chocolate cake marshmallow muffin cake.
-          </p>
+        </div>
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/bright-candies-colorful-539447.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
+          <figcaption class="card-img-caption">
+            <em>Halvah bonbon chupa chups</em>
+          </figcaption>
         </div>
       </article>
     </main>
