--- a/pages/blog-post-3.html
+++ b/pages/blog-post-3.html
@@ -13,8 +13,7 @@
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link async rel="stylesheet" href="../css/skeleton.css" />
-    <link async rel="stylesheet" href="../css/blog-post-detail.css" />
-    <link async rel="stylesheet" href="../css/mobile-blog-post-detail.css" />
+    <link async rel="stylesheet" href="../css/card-detail.css" />
     <!-- icons -->
     <link
       async
@@ -38,34 +37,50 @@
     </section>
     <main id="content" role="main">
       <h1>Sesame snaps candy canes</h1>
-      <article id="blogpost-detail">
-        <div class="blogpost-content" role="contentinfo">
+      <article class="card">
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/candy-colorful-confection-208006.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
-          <p class="blogpost-text" role="text">
+          <figcaption class="card-img-caption">
+            <em>Sesame snaps candy</em>
+          </figcaption>
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            Marzipan marzipan
+          </h2>
+          <p class="card-text" role="text">
             I love pudding candy. Marzipan marzipan jelly-o chocolate cake
             pudding I love bonbon. Oat cake oat cake biscuit cake dessert ice
             cream. Candy pudding cheesecake tiramisu oat cake bear claw
             croissant dragée I love. Carrot cake marzipan I love candy canes
             sugar plum. Donut danish I love cotton candy carrot cake.
           </p>
-          <p class="blogpost-text" role="text">
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            I love pudding candy
+          </h2>
+          <p class="card-text" role="text">
             I love pudding candy. Marzipan marzipan jelly-o chocolate cake
             pudding I love bonbon. Oat cake oat cake biscuit cake dessert ice
             cream. Candy pudding cheesecake tiramisu oat cake bear claw
             croissant dragée I love. Carrot cake marzipan I love candy canes
             sugar plum. Donut danish I love cotton candy carrot cake.
           </p>
+        </div>
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/candy-colorful-confection-208006.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
+          <figcaption class="card-img-caption">
+            <em>Sesame snaps candy</em>
+          </figcaption>
         </div>
       </article>
     </main>
