--- a/pages/blog-post-4.html
+++ b/pages/blog-post-4.html
@@ -13,8 +13,7 @@
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link async rel="stylesheet" href="../css/skeleton.css" />
-    <link async rel="stylesheet" href="../css/blog-post-detail.css" />
-    <link async rel="stylesheet" href="../css/mobile-blog-post-detail.css" />
+    <link async rel="stylesheet" href="../css/card-detail.css" />
     <!-- icons -->
     <link
       async
@@ -38,30 +37,46 @@
     </section>
     <main id="content" role="main">
       <h1>Halvah bonbon chupa chups</h1>
-      <article id="blogpost-detail">
-        <div class="blogpost-content" role="contentinfo">
+      <article class="card">
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/background-baked-bakery-1407346.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
-          <p class="blogpost-text" role="text">
+          <figcaption class="card-img-caption">
+            <em>Halvah bonbon</em>
+          </figcaption>
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            Cake liquorice chocolate
+          </h2>
+          <p class="card-text" role="text">
             Cake liquorice chocolate pie jelly-o. Chupa chups cookie croissant.
             Cake marzipan dessert. Pastry sweet roll halvah. Powder chupa chups
             biscuit cake tootsie roll bonbon biscuit.
           </p>
-          <p class="blogpost-text" role="text">
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            chocolate pie jelly-o
+          </h2>
+          <p class="card-text" role="text">
             Cake liquorice chocolate pie jelly-o. Chupa chups cookie croissant.
             Cake marzipan dessert. Pastry sweet roll halvah. Powder chupa chups
             biscuit cake tootsie roll bonbon biscuit.
           </p>
+        </div>
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/background-baked-bakery-1407346.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
+          <figcaption class="card-img-caption">
+            <em>Halvah bonbon</em>
+          </figcaption>
         </div>
       </article>
     </main>
