--- a/pages/blog-post-5.html
+++ b/pages/blog-post-5.html
@@ -13,8 +13,7 @@
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link async rel="stylesheet" href="../css/skeleton.css" />
-    <link async rel="stylesheet" href="../css/blog-post-detail.css" />
-    <link async rel="stylesheet" href="../css/mobile-blog-post-detail.css" />
+    <link async rel="stylesheet" href="../css/card-detail.css" />
     <!-- icons -->
     <link
       async
@@ -37,15 +36,22 @@
     </section>
     <main id="content" role="main">
       <h1>Cotton candy marshmallow candy</h1>
-      <article id="blogpost-detail">
-        <div class="blogpost-content" role="contentinfo">
+      <article class="card">
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/rsz_candy-color-creative-54633.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
-          <p class="blogpost-text" role="text">
+          <figcaption class="card-img-caption">
+            <em>Cotton candy</em>
+          </figcaption>
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            Pudding macaroon
+          </h2>
+          <p class="card-text" role="text">
             Pudding macaroon I love tiramisu toffee sesame snaps sugar plum
             candy canes cotton candy. Chocolate cake jelly fruitcake muffin
             icing dessert. Icing pie cake wafer marshmallow I love topping.
@@ -53,7 +59,12 @@
             roll donut chocolate bar oat cake bonbon chocolate cake gummies
             candy canes icing.
           </p>
-          <p class="blogpost-text" role="text">
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            I love tiramisu
+          </h2>
+          <p class="card-text" role="text">
             Pudding macaroon I love tiramisu toffee sesame snaps sugar plum
             candy canes cotton candy. Chocolate cake jelly fruitcake muffin
             icing dessert. Icing pie cake wafer marshmallow I love topping.
@@ -61,12 +72,16 @@
             roll donut chocolate bar oat cake bonbon chocolate cake gummies
             candy canes icing.
           </p>
+        </div>
+        <div class="card-img">
           <img
-            class="blogpost-image"
             src="../assets/rsz_candy-color-creative-54633.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
+          <figcaption class="card-img-caption">
+            <em>Cotton candy</em>
+          </figcaption>
         </div>
       </article>
     </main>
