--- a/pages/blog-post-2.html
+++ b/pages/blog-post-2.html
@@ -13,8 +13,7 @@
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link async rel="stylesheet" href="../css/skeleton.css" />
-    <link async rel="stylesheet" href="../css/blog-post-detail.css" />
-    <link async rel="stylesheet" href="../css/mobile-blog-post-detail.css" />
+    <link async rel="stylesheet" href="../css/card-detail.css" />
     <!-- icons -->
     <link
       async
@@ -37,15 +36,22 @@
     </section>
     <main id="content" role="main">
       <h1>Pudding icing chocolate bar</h1>
-      <article id="blogpost-detail">
-        <div class="blogpost-content" role="contentinfo">
+      <article class="card">
+        <div class="card-img" role="img">
           <img
-            class="blogpost-image"
             src="../assets/candy-colorful-colourful-51352.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
-          <p class="blogpost-text" role="text">
+          <figcaption class="card-img-caption">
+            <em>Pudding icing chocolate bar</em>
+          </figcaption>
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            Pudding icing chocolate bar
+          </h2>
+          <p class="card-text" role="text">
             Gummies muffin muffin chocolate macaroon. I love gummies pudding
             jelly topping ice cream cotton candy lemon drops. I love pastry
             candy biscuit I love I love. I love sweet roll chupa chups lollipop.
@@ -54,7 +60,12 @@
             Cotton candy halvah danish sesame snaps icing cake cotton candy
             wafer.
           </p>
-          <p class="blogpost-text" role="text">
+        </div>
+        <div class="card-body">
+          <h2 class="card-header" role="heading">
+            Gummies muffin
+          </h2>
+          <p class="card-text" role="text">
             Gummies muffin muffin chocolate macaroon. I love gummies pudding
             jelly topping ice cream cotton candy lemon drops. I love pastry
             candy biscuit I love I love. I love sweet roll chupa chups lollipop.
@@ -63,12 +74,16 @@
             Cotton candy halvah danish sesame snaps icing cake cotton candy
             wafer.
           </p>
+        </div>
+        <div class="card-img" role="img">
           <img
-            class="blogpost-image"
             src="../assets/candy-colorful-colourful-51352.jpg"
             alt="Fruitcake sweet"
             role="img"
           />
+          <figcaption class="card-img-caption">
+            <em>Pudding icing chocolate bar</em>
+          </figcaption>
         </div>
       </article>
     </main>
