fix review comments

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <title>Udacity Project 1: Personal Blog</title>
     <!-- styles -->
     <link
-      async
       rel="stylesheet"
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
-    <link async rel="stylesheet" href="css/skeleton.css" />
-    <link async rel="stylesheet" href="css/card.css" />
+    <link rel="stylesheet" href="css/skeleton.css" />
+    <link rel="stylesheet" href="css/card.css" />
     <!-- icons -->
     <link
-      async
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
@@ -53,15 +51,17 @@
       <h1>Hello there!</h1>
       <div id="blogpost-list">
         <article class="card">
-          <img
-            class="card-img"
-            src="./assets/bright-candies-colorful-539447.jpg"
-            alt="Fruitcake sweet"
-            role="img"
-          />
-          <figcaption class="card-img-caption">
-            <em>Halvah bonbon chupa chups</em>
-          </figcaption>
+          <figure>
+            <img
+              class="card-img"
+              src="./assets/bright-candies-colorful-539447.jpg"
+              alt="Fruitcake sweet"
+              role="img"
+            />
+            <figcaption class="card-img-caption">
+              <em>Halvah bonbon chupa chups</em>
+            </figcaption>
+          </figure>
           <div class="card-body" role="contentinfo">
             <h2 class="card-header" role="heading">
               Halvah bonbon chupa chups
@@ -80,15 +80,17 @@
           >
         </article>
         <article class="card">
-          <img
-            class="card-img"
-            src="./assets/candy-colorful-colourful-51352.jpg"
-            alt="muffin chocolate macaroon"
-            role="img"
-          />
-          <figcaption class="card-img-caption">
-            <em>Pudding icing chocolate bar</em>
-          </figcaption>
+          <figure>
+            <img
+              class="card-img"
+              src="./assets/candy-colorful-colourful-51352.jpg"
+              alt="muffin chocolate macaroon"
+              role="img"
+            />
+            <figcaption class="card-img-caption">
+              <em>Pudding icing chocolate bar</em>
+            </figcaption>
+          </figure>
           <div class="card-body" role="contentinfo">
             <h2 class="card-header" role="heading">
               Pudding icing chocolate bar
@@ -108,15 +110,17 @@
           >
         </article>
         <article class="card">
-          <img
-            class="card-img"
-            src="./assets/candy-colorful-confection-208006.jpg"
-            alt="pudding candy"
-            role="img"
-          />
-          <figcaption class="card-img-caption">
-            <em>Sesame snaps candy canes</em>
-          </figcaption>
+          <figure>
+            <img
+              class="card-img"
+              src="./assets/candy-colorful-confection-208006.jpg"
+              alt="pudding candy"
+              role="img"
+            />
+            <figcaption class="card-img-caption">
+              <em>Sesame snaps candy canes</em>
+            </figcaption>
+          </figure>
           <div class="card-body" role="contentinfo">
             <h2 class="card-header" role="heading">
               Sesame snaps candy canes
@@ -134,15 +138,17 @@
           >
         </article>
         <article class="card">
-          <img
-            class="card-img"
-            src="./assets/background-baked-bakery-1407346.jpg"
-            alt="Apple pie carrot cake"
-            role="img"
-          />
-          <figcaption class="card-img-caption">
-            <em>Apple pie carrot cake toffee</em>
-          </figcaption>
+          <figure>
+            <img
+              class="card-img"
+              src="./assets/background-baked-bakery-1407346.jpg"
+              alt="Apple pie carrot cake"
+              role="img"
+            />
+            <figcaption class="card-img-caption">
+              <em>Apple pie carrot cake toffee</em>
+            </figcaption>
+          </figure>
           <div class="card-body" role="contentinfo">
             <h2 class="card-header" role="heading">
               Apple pie carrot cake toffee
@@ -158,15 +164,17 @@
           >
         </article>
         <article class="card">
-          <img
-            class="card-img"
-            src="./assets/rsz_candy-color-creative-54633.jpg"
-            alt="Pudding macaroon"
-            role="img"
-          />
-          <figcaption class="card-img-caption">
-            <em>Cotton candy marshmallow candy</em>
-          </figcaption>
+          <figure>
+            <img
+              class="card-img"
+              src="./assets/rsz_candy-color-creative-54633.jpg"
+              alt="Pudding macaroon"
+              role="img"
+            />
+            <figcaption class="card-img-caption">
+              <em>Cotton candy marshmallow candy</em>
+            </figcaption>
+          </figure>
           <div class="card-body" role="contentinfo">
             <h2 class="card-header" role="heading">
               Cotton candy marshmallow candy
