--- a/pages/blog-post-5.html
+++ b/pages/blog-post-5.html
@@ -8,15 +8,13 @@
     <title>Udacity Project 1: Personal Blog</title>
     <!-- styles -->
     <link
-      async
       rel="stylesheet"
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
-    <link async rel="stylesheet" href="../css/skeleton.css" />
-    <link async rel="stylesheet" href="../css/card-detail.css" />
+    <link rel="stylesheet" href="../css/skeleton.css" />
+    <link rel="stylesheet" href="../css/card-detail.css" />
     <!-- icons -->
     <link
-      async
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
@@ -38,14 +36,16 @@
       <h1>Cotton candy marshmallow candy</h1>
       <article class="card">
         <div class="card-img">
-          <img
-            src="../assets/rsz_candy-color-creative-54633.jpg"
-            alt="Fruitcake sweet"
-            role="img"
-          />
-          <figcaption class="card-img-caption">
-            <em>Cotton candy</em>
-          </figcaption>
+          <figure>
+            <img
+              src="../assets/rsz_candy-color-creative-54633.jpg"
+              alt="Fruitcake sweet"
+              role="img"
+            />
+            <figcaption class="card-img-caption">
+              <em>Cotton candy</em>
+            </figcaption>
+          </figure>
         </div>
         <div class="card-body">
           <h2 class="card-header" role="heading">
@@ -74,14 +74,16 @@
           </p>
         </div>
         <div class="card-img">
-          <img
-            src="../assets/rsz_candy-color-creative-54633.jpg"
-            alt="Fruitcake sweet"
-            role="img"
-          />
-          <figcaption class="card-img-caption">
-            <em>Cotton candy</em>
-          </figcaption>
+          <figure>
+            <img
+              src="../assets/rsz_candy-color-creative-54633.jpg"
+              alt="Fruitcake sweet"
+              role="img"
+            />
+            <figcaption class="card-img-caption">
+              <em>Cotton candy</em>
+            </figcaption>
+          </figure>
         </div>
       </article>
     </main>
